--- a/style.css
+++ b/style.css
@@ -2329,6 +2329,11 @@ body.single-product span.onsale {
 .woocommerce-page table.cart td.actions .input-text {
   padding: 9px; }
 
+.woocommerce ul.products li.product a {
+  width: 100%;
+  font-size: 16px;
+  text-align: center; }
+
 @media only screen and (max-width: 40.063em) {
   .primer-wc-cart-menu .primer-wc-cart-sub-menu {
     width: 100%; }
